# TD_MCP

./: .gitattributes  .gitignore  ARCHITECTURE.md  CHANGELOG.md  COMMIT.md  CONTRIBUTING.md  HOW_TO_USE.md  LICENSE  README.md  SUMMARY.md  TD_MCP_Master_Plan.md  TouchDesigner_MCP_Servers.md  pyproject.toml  repomix.config.json  setup_env.ps1
.github/workflows/: ci.yml
DOCUMENTATION/: TD_MCP_Master_Plan.md  TouchDesigner_Links.md
bridge/: bootstrap.py  chat_ui.html  td_mcp_agent.py  td_mcp_bridge.py
scripts/: bump_version.py  generate_summary.py
skills/td-building/: SKILL.md
td_mcp/: __init__.py  bundle.py  compat.py  config_gen.py  discover.py  eval.py  generators.py  glsl_patterns.py  heal.py  macro.py  memory.py  param_resolver.py  perf.py  progress.py  prompts.py  recipe_vault.py  scoring.py  server_live.py  server_offline.py  spatial.py  streamable_http.py  validation.py  vision.py
td_mcp/kb/: build_index.py  build_kb.py  chunks.jsonl  corpus.py  import_corpus.py  scrape.py
td_mcp/led_mapping/: __init__.py
td_mcp/rag/: eval.py  knowledge_graph.py  rerank.py  retriever.py  strategies.py
td_mcp/showcontrol/: __init__.py
td_mcp/tdn/: __init__.py
td_mcp/tools/: __init__.py  layout.py  logs.py  recovery.py  risk.py
td_mcp/util/: __init__.py  (+1 more)
tests/: fake_remote_mcp.py  test_agent.py  test_bundle.py  test_compat.py  test_config_gen.py  test_corpus.py  test_discover.py  test_eval.py  test_glsl.py  test_heal.py  test_layout.py  test_live_server.py  test_logs.py  test_macro.py  test_mcp_server.py  test_memory.py  test_merge_features.py  test_offline_more_tools.py  test_offline_new_tools.py  test_perf.py  test_progress.py  test_prompts.py  test_rag.py  test_recipe.py  test_recovery.py  test_review_regressions.py  test_scan_ws.py  test_scoring.py  test_showcontrol.py  test_spatial.py  test_tdn.py  test_validation.py  test_vision.py
(+5 files in other folders)
